# blink-standalone-ui

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
cmake/: live_blink_sources.cmake
manifest/: copied_files.txt
tools/: content_aware_compare.py  export_blink_standalone_ui.py  playwright_setup_dump.cjs  setup_diff.py  summarize_content_aware.py
upstream/chromium/base/: BUILD.gn  logging.cc
upstream/chromium/base/json/: json_reader.cc
upstream/chromium/base/test/: BUILD.gn
upstream/chromium/cc/raster/: tile_task.h
upstream/chromium/net/log/: net_log_capture_mode.h
upstream/chromium/standalone_renderer/examples/: render_benchmark.cc  render_blink_cli.cc  render_cli.cc  render_demo.cc  sdl_viewer.cc
upstream/chromium/standalone_renderer/include/html_css_renderer/: blink_adapter.h  blink_runtime_environment.h  blink_tree_bridge_probe.h  cpu_renderer.h  draw_command.h  draw_command_serializer.h  load_command.h  paint_translator.h  render_frame.h  render_policy.h  renderer.h  retained_scene.h  skia_cpu_renderer.h  source_text_backend.h  standalone_resource_provider.h  text_engine.h  typeface_resource_registry.h
upstream/chromium/standalone_renderer/src/: associated_interface_provider_standalone.cc  blink_adapter.cc  blink_embedded_ua_resources.cc  blink_lifecycle_shim.cc  blink_page_embedder.cc  blink_runtime_adapter.cc  blink_runtime_environment.cc  content_security_policy_standalone.cc  cpu_renderer.cc  document_loader_standalone.cc  draw_command.cc  draw_command_serializer.cc  file_chooser_standalone.cc  generated_name_atoms_standalone.cc  history_item_standalone.cc  incremental_damage.cc  incremental_damage.h  inspector_trace_events_standalone.cc  live_boundary_value_standalone.cc  live_core_initializer_stub.cc  live_empty_clients_stub.cc  live_link_boundary_stubs.cc  live_trace_origin_compat.cc  load_command.cc  network_feature_standalone.cc  paint_translator.cc  render_frame.cc  render_policy.cc  renderer.cc  retained_scene.cc  skia_cpu_renderer.cc  source_text_backend.cc  standalone_frame.cc  standalone_frame.h  standalone_resource_provider.cc  typeface_resource_registry.cc  url_network_standalone.cc  web_history_item_standalone.cc
upstream/chromium/standalone_renderer/stubs/: standalone_live_blink_namespace_forwards.h  standalone_network_namespace_forwards.h
upstream/chromium/standalone_renderer/stubs/GLES2/: gl2.h
upstream/chromium/standalone_renderer/stubs/base/trace_event/: trace_event.h  typed_macros.h
upstream/chromium/standalone_renderer/stubs/base/trace_event/common/: trace_event_common.h
upstream/chromium/standalone_renderer/stubs/components/attribution_reporting/: data_host.mojom-blink-forward.h  registration_eligibility.mojom-blink-forward.h
upstream/chromium/standalone_renderer/stubs/components/paint_preview/common/: paint_preview_tracker.h
upstream/chromium/standalone_renderer/stubs/components/viz/common/: buildflags.h
upstream/chromium/standalone_renderer/stubs/gpu/command_buffer/client/: client_shared_image.h
upstream/chromium/standalone_renderer/stubs/gpu/ipc/client/: gpu_channel_observer.h
upstream/chromium/standalone_renderer/stubs/gpu/ipc/common/: exported_shared_image.mojom-forward.h  shared_image_pool_client_interface.mojom.h
upstream/chromium/standalone_renderer/stubs/media/mojo/mojom/: audio_processing.mojom-shared.h  media_player.mojom-blink.h
upstream/chromium/standalone_renderer/stubs/net/url_request/: referrer_policy.h
upstream/chromium/standalone_renderer/stubs/perfetto/tracing/: traced_value.h  traced_value_blink_traits.h
upstream/chromium/standalone_renderer/stubs/printing/mojom/: print.mojom-shared.h
upstream/chromium/standalone_renderer/stubs/protos/perfetto/common/: builtin_clock.pbzero.h
upstream/chromium/standalone_renderer/stubs/protos/perfetto/config/: data_source_config.gen.h
upstream/chromium/standalone_renderer/stubs/protos/perfetto/trace/: trace_packet.pbzero.h
upstream/chromium/standalone_renderer/stubs/ui/accessibility/: ax_enums.mojom-blink-forward.h  ax_enums.mojom-forward.h  ax_enums.mojom-shared.h  ax_enums.mojom.h
upstream/chromium/standalone_renderer/testdata/paint_audit/: 00_text_only.html  00_text_only_black.html  00b_text_red.html  00c_text_large.html  00d_text_bold_italic.html  00e_text_decoration.html  00f_text_unicode_basic.html  01_solid_box.html  02_gradient_rounded_border.html  03_transform_opacity.html  03a_transform_translate_only.html  03b_transform_rotate_only.html  03c_opacity_only.html  03d_transform_opacity_no_overflow.html  03e_overflow_clip_only.html  03f_overflow_clip_border_radius.html  03g_transform_opacity_overflow_clip.html  03h_text_decoration_only.html  04_overflow_clip.html  05_image.html  05_image_data_png.html  05b_image_data_svg.html  05c_image_size_attrs.html  05d_css_background_image_data.html  05e_object_fit_contain_cover.html  05f_broken_image.html  05g_image_data_png_red_2x2.html  05h_image_data_png_checker_4x4.html  05i_image_data_png_alpha.html  05j_repeated_same_image.html  10_block_margin_padding.html  10b_nested_blocks.html  10c_inline_block.html  10d_absolute_position.html  10e_relative_position.html  10f_flex_basic.html  10g_grid_basic.html  10h_border_box_sizing.html  10i_scroll_overflow_position.html  11_text_underline.html  (+6 more)
upstream/chromium/standalone_renderer/tools/: analyze_live_link_frontier.py  audit_blink_platform_cut.py  check_forbidden_deps.py  compare_with_playwright.py  compile_live_frame_bridge_probe.py  generate_mojom_stub.py  inventory_chromium_cut.py  print_blink_source_manifest.py  relink_blink_adapter_inventory_tests.py  relink_blink_cli_with_tree_builder.py  relink_blink_sdl_viewer_with_tree_builder.py  relink_blink_tree_builder_probe.py  run_ninja_commands.py  trace_blink_include_closure.py  validate_cut_manifest.py  validate_dependency_manifest.py  write_probe_file.py
upstream/chromium/ui/native_theme/: BUILD.gn  native_theme.cc
upstream/chromium/url/: BUILD.gn
upstream/chromium/v8/include/cppgc/: allocation.h
(+114 files in other folders)
